--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,11 @@
         }
     ],
     "require": {
-        "illuminate/database": "^5.4",
-        "illuminate/support": "^5.4",
         "guzzlehttp/guzzle": "^6.2",
         "mollie/mollie-api-php": "1.9.*",
-        "php" : "~5.6|~7.0"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.3",
-        "mockery/mockery": "^0.9.9",
-        "orchestra/database": "^3.4",
-        "phpunit/phpunit": "~4.0||~5.0||~6.0",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
         "psr-4": {
